--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
             h2 {
                 color: rgb(0,100,100)
             }
+            .cursive{
+                font-family: cursive
+            {
         </style>
         <!-- Load external CSS styles -->
         <link rel="stylesheet" href="styles.css">
@@ -19,7 +22,7 @@
         <h1>Feathery Friend Toys</h1>
         <h2>What are the toys made of?</h2>
         <ul>
-            <p>Feathery friend toys are made of bird friendly and natural products.</p>
+            <p>Feathery friend toys are made of <em class="cursive">bird friendly</em> and <em class="cursive">natural products</em>.</p>
             <li>Cork</li>
             <li>Untreated Wood</li>
             <li>Shreddable Paper</li>
