--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
             h2 {
                 color: rgb(0,100,100)
             }
-            .cursive{
-                font-family: cursive
+            .moonospace{
+                font-family: monospace
             {
         </style>
         <!-- Load external CSS styles -->
@@ -22,7 +22,7 @@
         <h1>Feathery Friend Toys</h1>
         <h2>What are the toys made of?</h2>
         <ul>
-            <p>Feathery friend toys are made of <em class="cursive">bird friendly</em> and <em class="cursive">natural products</em>.</p>
+            <p>Feathery friend toys are made of <strong class="monospace">bird friendly</strong> and <strong class="monospace">natural products</strong>.</p>
             <li>Cork</li>
             <li>Untreated Wood</li>
             <li>Shreddable Paper</li>
