--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
             h2 {
                 color: rgb(0,100,100)
             }
-            .moonospace{
+            .monospace{
                 font-family: monospace
             {
+            .serif{
+                font-family: serif
+            }
         </style>
         <!-- Load external CSS styles -->
         <link rel="stylesheet" href="styles.css">
@@ -31,7 +34,7 @@
             <li>Twine</li>
             <li>Wooden Beads</li>
             <li>Popsicle Sticks</li>
-            <p> Feathery Friend's offers a wide range of toys to entertain you parrot for hours to come. From <em> foraging</em> to <em> interactive</em> toys <strong>we have them all.</strong></p>    
+            <p> Feathery Friend's offers a wide range of toys to entertain you parrot for hours to come. From <em class="serif"> foraging</em> to <em class="serif"> interactive</em> toys <strong class="monospace">we have them all.</strong></p>    
             <img src="https://static.wixstatic.com/media/aa1884_5ce5cc947dac47c08afd8d0f2b5cede4~mv2.png/v1/fill/w_225,h_225,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/aa1884_5ce5cc947dac47c08afd8d0f2b5cede4~mv2.png" alt="Beak Buster Toy">
             <img src="https://static.wixstatic.com/media/aa1884_afd66fa459e546f4b734ff52eeafa33b~mv2.png/v1/fill/w_225,h_225,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/aa1884_afd66fa459e546f4b734ff52eeafa33b~mv2.png" alt="Floppy Frank Toy">
             <img src="https://static.wixstatic.com/media/aa1884_08ffeabf68c140fc88eea714a5e9a0aa~mv2.png/v1/fill/w_225,h_225,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/aa1884_08ffeabf68c140fc88eea714a5e9a0aa~mv2.png" alt="Razzle Dazzle Toy">
