--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             .serif{
                 font-family: serif
             }
+            #heading{
+                text-align: center
         </style>
         <!-- Load external CSS styles -->
         <link rel="stylesheet" href="styles.css">
@@ -22,7 +24,7 @@
     </head>
 
     <body>
-        <h1>Feathery Friend Toys</h1>
+        <h1 id="heading">Feathery Friend Toys</h1>
         <h2>What are the toys made of?</h2>
         <ul>
             <p>Feathery friend toys are made of <strong class="monospace">bird friendly</strong> and <strong class="monospace">natural products</strong>.</p>
@@ -40,7 +42,7 @@
             <img src="https://static.wixstatic.com/media/aa1884_08ffeabf68c140fc88eea714a5e9a0aa~mv2.png/v1/fill/w_225,h_225,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/aa1884_08ffeabf68c140fc88eea714a5e9a0aa~mv2.png" alt="Razzle Dazzle Toy">
             <img src="https://static.wixstatic.com/media/aa1884_e0ab1d99e4a94463a50fc265e8cfe6d2~mv2.png/v1/fill/w_225,h_225,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/aa1884_e0ab1d99e4a94463a50fc265e8cfe6d2~mv2.png" alt="Twinkle Chew toy">
             <img src="https://static.wixstatic.com/media/aa1884_7c316da98acd4e20a8f89a4664ac5211~mv2.png/v1/fill/w_225,h_225,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/aa1884_7c316da98acd4e20a8f89a4664ac5211~mv2.png" alt="Stiff Stckman Toy">
-            <h2>Buy these toys here: <a href="https://www.parrotrescuesouthafrica.com/shop">Cheeky Beaks</a></h2>
+            <h2>Buy these toys on <a href="https://www.parrotrescuesouthafrica.com/shop">Cheeky Beaks</a></h2>
             <!-- Load external JavaScript -->
         <script src="scripts.js"></script>
         
