--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 font-family: serif
             }
             #heading{
-                text-align: center
+                text-align: center;
         </style>
         <!-- Load external CSS styles -->
         <link rel="stylesheet" href="styles.css">
