--- a/index.html
+++ b/index.html
@@ -49,25 +49,25 @@
       <h2 class="section-title">Our Toys</h2>
       <div class="product-grid">
         <div class="product-card">
-          <img src="https://via.placeholder.com/250x200?text=Beak+Buster" alt="Beak Buster Toy">
+          <img src="https://github.com/LuhyLuhan/featheryfriendtoys.github.io/blob/main/Beak_Buster.png?raw=true">
           <h3>Beak Buster</h3>
           <p>A crunchy, chewy toy perfect for parrots that love to destroy.</p>
           <a href="#contact">Buy Now</a>
         </div>
         <div class="product-card">
-          <img src="https://via.placeholder.com/250x200?text=Floppy+Frank" alt="Floppy Frank Toy">
+          <img src="https://github.com/LuhyLuhan/featheryfriendtoys.github.io/blob/main/Floppy_Frank.png?raw=true">
           <h3>Floppy Frank</h3>
           <p>Wobbly and fun with hanging paper and soft beads.</p>
           <a href="#contact">Buy Now</a>
         </div>
         <div class="product-card">
-          <img src="https://via.placeholder.com/250x200?text=Razzle+Dazzle" alt="Razzle Dazzle Toy">
-          <h3>Razzle Dazzle</h3>
-          <p>Bright, multicolored toy with layers of shreddables.</p>
+          <img src="https://github.com/LuhyLuhan/featheryfriendtoys.github.io/blob/main/Crazy%20Carousal.png?raw=true">
+          <h3>Crazy Carousal</h3>
+          <p>Bright, multicolored toy with layers of Cork and Beads.</p>
           <a href="#contact">Buy Now</a>
         </div>
         <div class="product-card">
-          <img src="https://via.placeholder.com/250x200?text=Stickman" alt="Stiff Stickman Toy">
+          <img src="https://github.com/LuhyLuhan/featheryfriendtoys.github.io/blob/main/Stiff%20Stickman.png?raw=true">
           <h3>Stiff Stickman</h3>
           <p>A tough, straight toy with charm. Bell optional!</p>
           <a href="#contact">Buy Now</a>
