--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
 
     <section id="rescue" style="margin-top: 3rem;">
       <h2 class="section-title">Supporting Cheeky Beaks</h2>
-      <p style="text-align: center; max-width: 700px; margin: auto;">We proudly donate toys to <a href="https://www.cheekybeaks.org" target="_blank">Cheeky Beaks Parrot Rescue</a>. They’ve unboxed and tested our toys with their rescues — check them out on YouTube for a firsthand look!</p>
+      <p style="text-align: center; max-width: 700px; margin: auto;">We proudly donate toys to <a href="https://www.cheekybeaks.org.za/">Cheeky Beaks Parrot Rescue</a>. They’ve unboxed and tested our toys with their rescues — check them out on YouTube for a firsthand look!</p>
     </section>
 
     <section id="contact" style="margin-top: 3rem;">
       <h2 class="section-title">Contact & Orders</h2>
-      <p style="text-align: center; max-width: 700px; margin: auto;">To order, email us at <strong>featheryfriendtoys@gmail.com</strong> or message us on Instagram <strong>@featheryfriendtoys</strong>. We deliver across South Africa and can customize toys on request!</p>
+      <p style="text-align: center; max-width: 700px; margin: auto;">To order, email us at <strong>featheryfriendtoys@gmail.com</strong>. We deliver across South Africa and can customize toys on request!</p>
     </section>
   </main>
 
