--- a/index.html
+++ b/index.html
@@ -22,13 +22,24 @@
     .product-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 2rem; }
     .product-card { background: white; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.08); padding: 1rem; text-align: center; transition: transform 0.2s; }
     .product-card:hover { transform: translateY(-5px); }
-    .product-card img { width: 100%; max-height: 200px; object-fit: cover; border-radius: 8px; }
+    .product-card img {
+      width: 100%;
+      max-height: 250px;
+      object-fit: contain;  /* <-- changed from 'cover' to 'contain' */
+      border-radius: 8px;
+      background: white;
+    }
     .product-card h3 { margin-top: 0.8rem; font-size: 1.3rem; color: #333; }
     .product-card p { font-size: 0.95rem; color: #666; margin: 0.5rem 0; }
     .product-card a { background: #ffbf00; color: white; text-decoration: none; padding: 0.6rem 1rem; border-radius: 6px; display: inline-block; margin-top: 0.5rem; }
     .product-card a:hover { background: #ffaa00; }
 
     footer { background: #ffda77; text-align: center; padding: 1rem; margin-top: 2rem; color: #333; font-size: 0.9rem; }
+    @media (max-width: 500px) {
+  .product-card img {
+    max-height: 200px;
+  }
+}
   </style>
 </head>
 <body>
