--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
         <div class="product-card">
           <img src="https://github.com/LuhyLuhan/featheryfriendtoys.github.io/blob/main/Beak_Buster.png?raw=true">
           <h3>Beak Buster</h3>
-          <p>A crunchy, chewy toy perfect for parrots that love to destroy.</p>
+          <p>A crunchy, chewy toy perfect for medium sized parrots that love to destroy.</p>
           <a href="#contact">Buy Now</a>
         </div>
         <div class="product-card">
           <img src="https://github.com/LuhyLuhan/featheryfriendtoys.github.io/blob/main/Floppy_Frank.png?raw=true">
           <h3>Floppy Frank</h3>
-          <p>Wobbly and fun with hanging paper and soft beads.</p>
+          <p>Wobbly and fun with hanging paper and wooden beads.</p>
           <a href="#contact">Buy Now</a>
         </div>
         <div class="product-card">
@@ -80,7 +80,7 @@
         <div class="product-card">
           <img src="https://github.com/LuhyLuhan/featheryfriendtoys.github.io/blob/main/Stiff%20Stickman.png?raw=true">
           <h3>Stiff Stickman</h3>
-          <p>A tough, straight toy with charm. Bell optional!</p>
+          <p>A tough, straight toy with charm.</p>
           <a href="#contact">Buy Now</a>
         </div>
       </div>
