--- a/index.html
+++ b/index.html
@@ -1,45 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Feathery Friend Toys – Safe, handmade toys for parrots and birds. Natural materials, colorful fun!">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Feathery Friend Toys – Handmade, natural, and bird-safe toys made with love in South Africa." />
+  <meta name="keywords" content="bird toys, parrot toys, budgie toys, cockatiel toys, handmade bird toys, South Africa" />
+  <meta property="og:title" content="Feathery Friend Toys" />
+  <meta property="og:description" content="Handmade, natural toys to keep your birds happy, active, and safe." />
+  <meta property="og:type" content="website" />
   <title>Feathery Friend Toys</title>
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; }
-    body { background: #fefdfb; color: #333; }
-    header { background: #ffda77; padding: 1rem 2rem; text-align: center; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
-    header h1 { font-size: 2.5rem; margin-bottom: 0.5rem; }
-    header p { font-size: 1.1rem; color: #4d4d4d; }
+    body { background: #fffdf6; color: #333; line-height: 1.6; }
 
-    nav { background: #fff3c7; padding: 1rem; display: flex; justify-content: center; gap: 1.5rem; border-bottom: 2px solid #ffe9a0; }
-    nav a { color: #444; text-decoration: none; font-weight: bold; }
-    nav a:hover { text-decoration: underline; }
+    header {
+      background: linear-gradient(135deg, #ffe488, #ffd24d);
+      padding: 3rem 1rem;
+      text-align: center;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    header h1 { font-size: 2.8rem; color: #333; margin-bottom: 0.5rem; }
+    header p { font-size: 1.2rem; color: #444; }
 
-    .container { max-width: 1000px; margin: auto; padding: 2rem 1rem; }
-    .section-title { text-align: center; font-size: 2rem; margin-bottom: 1rem; color: #d49b00; }
+    nav {
+      background: #fff6d1;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 1.5rem;
+      padding: 1rem;
+      border-bottom: 2px solid #ffe9a0;
+    }
+    nav a {
+      color: #333;
+      text-decoration: none;
+      font-weight: 600;
+      transition: color 0.2s;
+    }
+    nav a:hover { color: #d49b00; }
 
-    .product-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 2rem; }
-    .product-card { background: white; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.08); padding: 1rem; text-align: center; transition: transform 0.2s; }
-    .product-card:hover { transform: translateY(-5px); }
+    .container { max-width: 1100px; margin: auto; padding: 2rem 1rem; }
+    .section-title {
+      text-align: center;
+      font-size: 2rem;
+      margin-bottom: 1.5rem;
+      color: #d49b00;
+    }
+
+    .product-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 2rem;
+    }
+    .product-card {
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.08);
+      padding: 1rem;
+      text-align: center;
+      transition: transform 0.2s, box-shadow 0.2s;
+    }
+    .product-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 6px 15px rgba(0,0,0,0.12);
+    }
     .product-card img {
       width: 100%;
-      max-height: 250px;
-      object-fit: contain;  /* <-- changed from 'cover' to 'contain' */
+      max-height: 240px;
+      object-fit: contain;
       border-radius: 8px;
       background: white;
     }
     .product-card h3 { margin-top: 0.8rem; font-size: 1.3rem; color: #333; }
-    .product-card p { font-size: 0.95rem; color: #666; margin: 0.5rem 0; }
-    .product-card a { background: #ffbf00; color: white; text-decoration: none; padding: 0.6rem 1rem; border-radius: 6px; display: inline-block; margin-top: 0.5rem; }
-    .product-card a:hover { background: #ffaa00; }
+    .product-card p { font-size: 0.95rem; color: #666; margin: 0.5rem 0 1rem; }
+    .btn {
+      background: #ffbf00;
+      color: white;
+      text-decoration: none;
+      padding: 0.6rem 1rem;
+      border-radius: 6px;
+      display: inline-block;
+      font-weight: 600;
+      transition: background 0.2s;
+    }
+    .btn:hover { background: #ffaa00; }
 
-    footer { background: #ffda77; text-align: center; padding: 1rem; margin-top: 2rem; color: #333; font-size: 0.9rem; }
+    /* About & contact sections */
+    section p { text-align: center; max-width: 700px; margin: 0 auto 1.5rem; }
+
+    form {
+      max-width: 600px;
+      margin: 1rem auto;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+    input, textarea {
+      padding: 0.8rem;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      font-size: 1rem;
+      width: 100%;
+    }
+    button {
+      background: #ffbf00;
+      color: white;
+      border: none;
+      padding: 0.8rem 1rem;
+      border-radius: 6px;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: background 0.2s;
+    }
+    button:hover { background: #ffaa00; }
+
+    footer {
+      background: #ffda77;
+      text-align: center;
+      padding: 1.5rem 1rem;
+      margin-top: 3rem;
+      color: #333;
+      font-size: 0.9rem;
+    }
+    footer .socials a {
+      margin: 0 0.5rem;
+      text-decoration: none;
+      color: #333;
+      font-weight: bold;
+    }
+    footer .socials a:hover { color: #d49b00; }
+
     @media (max-width: 500px) {
-      .product-card img {
-        max-height: 200px;
-  }
-}
+      header h1 { font-size: 2rem; }
+      .product-card img { max-height: 200px; }
+    }
   </style>
 </head>
 <body>
@@ -56,54 +150,72 @@
   </nav>
 
   <main class="container">
+    <!-- Toys -->
     <section id="toys">
       <h2 class="section-title">Our Toys</h2>
       <div class="product-grid">
         <div class="product-card">
-          <img src="https://github.com/LuhyLuhan/featheryfriendtoys.github.io/blob/main/Beak_Buster.png?raw=true">
+          <img src="https://github.com/LuhyLuhan/featheryfriendtoys.github.io/blob/main/Beak_Buster.png?raw=true" alt="Beak Buster bird toy">
           <h3>Beak Buster</h3>
-          <p>A crunchy, chewy toy perfect for medium sized parrots that love to destroy.</p>
-          <a href="#contact">Buy Now</a>
+          <p>A crunchy, chewy toy perfect for medium-sized parrots that love to destroy.</p>
+          <a href="#contact" class="btn">Order Now</a>
         </div>
         <div class="product-card">
-          <img src="https://github.com/LuhyLuhan/featheryfriendtoys.github.io/blob/main/Floppy_Frank.png?raw=true">
+          <img src="https://github.com/LuhyLuhan/featheryfriendtoys.github.io/blob/main/Floppy_Frank.png?raw=true" alt="Floppy Frank bird toy">
           <h3>Floppy Frank</h3>
           <p>Wobbly and fun with hanging paper and wooden beads.</p>
-          <a href="#contact">Buy Now</a>
+          <a href="#contact" class="btn">Order Now</a>
         </div>
         <div class="product-card">
-          <img src="https://github.com/LuhyLuhan/featheryfriendtoys.github.io/blob/main/Crazy%20Carousal.png?raw=true">
+          <img src="https://github.com/LuhyLuhan/featheryfriendtoys.github.io/blob/main/Crazy%20Carousal.png?raw=true" alt="Crazy Carousal bird toy">
           <h3>Crazy Carousal</h3>
-          <p>Bright, multicolored toy with layers of Cork and Beads.</p>
-          <a href="#contact">Buy Now</a>
+          <p>Bright, multicolored toy with layers of cork and beads.</p>
+          <a href="#contact" class="btn">Order Now</a>
         </div>
         <div class="product-card">
-          <img src="https://github.com/LuhyLuhan/featheryfriendtoys.github.io/blob/main/Stiff%20Stickman.png?raw=true">
+          <img src="https://github.com/LuhyLuhan/featheryfriendtoys.github.io/blob/main/Stiff%20Stickman.png?raw=true" alt="Stiff Stickman bird toy">
           <h3>Stiff Stickman</h3>
           <p>A tough, straight toy with charm.</p>
-          <a href="#contact">Buy Now</a>
+          <a href="#contact" class="btn">Order Now</a>
         </div>
       </div>
     </section>
 
-    <section id="materials" style="margin-top: 3rem;">
+    <!-- Materials -->
+    <section id="materials" style="margin-top: 4rem;">
       <h2 class="section-title">What We Use</h2>
-      <p style="text-align: center; max-width: 700px; margin: auto;">We use bird-safe, eco-friendly materials like cork, untreated wood, paper straws, cardboard, natural twine, wooden beads, popsicle sticks, and shredded paper to ensure your feathery friends are entertained and safe.</p>
+      <p>We use bird-safe, eco-friendly materials like cork, untreated wood, paper straws, cardboard, natural twine, wooden beads, popsicle sticks, and shredded paper to ensure your feathery friends are entertained and safe.</p>
     </section>
 
-    <section id="rescue" style="margin-top: 3rem;">
+    <!-- Rescue -->
+    <section id="rescue" style="margin-top: 4rem;">
       <h2 class="section-title">Supporting Cheeky Beaks</h2>
-      <p style="text-align: center; max-width: 700px; margin: auto;">We proudly donate toys to <a href="https://www.cheekybeaks.org.za/">Cheeky Beaks Parrot Rescue</a>. They’ve unboxed and tested our toys with their rescues — check them out on YouTube for a firsthand look!</p>
+      <p>We proudly donate toys to <a href="https://www.cheekybeaks.org.za/" target="_blank" rel="noopener">Cheeky Beaks Parrot Rescue</a>. They’ve unboxed and tested our toys with their rescues — check them out on YouTube for a firsthand look!</p>
     </section>
 
-    <section id="contact" style="margin-top: 3rem;">
+    <!-- Contact -->
+    <section id="contact" style="margin-top: 4rem;">
       <h2 class="section-title">Contact & Orders</h2>
-      <p style="text-align: center; max-width: 700px; margin: auto;">To order, email us at <strong>featheryfriendtoys@gmail.com</strong>. We deliver across South Africa and can customize toys on request!</p>
+      <p>To order, fill out the form below or email us at <strong>featheryfriendtoys@gmail.com</strong>.  
+      We deliver across South Africa and can customize toys on request!</p>
+
+      <form action="https://formspree.io/f/xrbrbkno" method="POST">
+        <input type="text" name="name" placeholder="Luhan" required />
+        <input type="email" name="_replyto" placeholder="featheryfriendtoys@gmail.com" required />
+        <textarea name="message" rows="5" placeholder="What would you like to order or ask?" required></textarea>
+        <button type="submit">Send Message</button>
+      </form>
+      <p style="font-size:0.9rem; text-align:center; color:#666;">(Form powered by Formspree – free for small sites)</p>
     </section>
   </main>
 
   <footer>
-    &copy; 2025 Feathery Friend Toys. Handmade with love in South Africa.
+    <div class="socials">
+      <a href="https://www.youtube.com/@yourchannel" target="_blank">YouTube</a> |
+      <a href="https://www.instagram.com/yourhandle" target="_blank">Instagram</a> |
+      <a href="mailto:featheryfriendtoys@gmail.com">Email</a>
+    </div>
+    <p>&copy; 2023 Feathery Friend Toys. Handmade with love in South Africa.</p>
   </footer>
 </body>
 </html>
