Update YouTube link in footer

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
   <footer>
     <div class="socials">
-      <a href="https://www.youtube.com/@yourchannel" target="_blank">YouTube</a> |
+      <a href="https://www.youtube.com/channel/UCk4MauSHN_M1nC0OAlTzWtg" target="_blank">YouTube</a> |
       <a href="https://www.instagram.com/yourhandle" target="_blank">Instagram</a> |
       <a href="mailto:featheryfriendtoys@gmail.com">Email</a>
     </div>
