--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
       We deliver across South Africa and can customize toys on request!</p>
 
       <form action="https://formspree.io/f/xrbrbkno" method="POST">
-        <input type="text" name="name" placeholder="Luhan" required />
-        <input type="email" name="_replyto" placeholder="featheryfriendtoys@gmail.com" required />
+        <input type="text" name="name" placeholder="Your Name" required />
+        <input type="email" name="_replyto" placeholder="Your Email" required />
         <textarea name="message" rows="5" placeholder="What would you like to order or ask?" required></textarea>
         <button type="submit">Send Message</button>
       </form>
