Add Black Friday banner to index.html
Added a Black Friday banner with a special offer.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
   <meta property="og:type" content="website" />
   <title>Feathery Friend Toys</title>
   <style>
+    #blackFridayBanner {
+  background: #000;
+  color: #ffbf00;
+  text-align: center;
+  padding: 0.8rem 1rem;
+  font-weight: bold;
+  font-size: 1.2rem;
+  letter-spacing: 0.5px;
+  animation: pulse 1.5s infinite;
+}
+
+    @keyframes pulse {
+      0% { opacity: 1; }
+      50% { opacity: 0.6; }
+      100% { opacity: 1; }
+    }
+
     * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; }
     body { background: #fffdf6; color: #333; line-height: 1.6; }
 
@@ -137,6 +154,10 @@
   </style>
 </head>
 <body>
+  <div id="blackFridayBanner">
+  🎉 Black Friday Special! Extra 20% OFF all toys – this week only! 🐦
+  </div>
+
   <header>
     <h1>Feathery Friend Toys</h1>
     <p>Handmade, natural toys to keep your birds happy, active, and safe</p>
